--- a/Rtw.Matrix.Tests/Matrix.Tests.csproj
+++ b/Rtw.Matrix.Tests/Matrix.Tests.csproj
@@ -54,9 +54,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Rtw.Matrix\Rtw.Matrix.csproj">
+    <ProjectReference Include="..\Rtw.Matrix\Matrix.csproj">
       <Project>{5e65bcc5-6d75-4361-b728-56c6cb261d70}</Project>
-      <Name>Rtw.Matrix</Name>
+      <Name>Matrix</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
