--- a/Matrix/Matrix.nuspec
+++ b/Matrix/Matrix.nuspec
@@ -6,13 +6,16 @@
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
-    <licenseUrl>http://opensource.org/licenses/MIT</licenseUrl>
+    <licenseUrl>https://github.com/rajithaw/Matrix/blob/master/LICENSE.md</licenseUrl>
     <projectUrl>https://github.com/rajithaw/Matrix</projectUrl>
     <iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
-    <copyright>Copyright 2015</copyright>
+    <releaseNotes></releaseNotes>
+    <copyright>Copyright 2015 Rajitha Wimalasooriya</copyright>
     <tags>Matrix Math Inverse Determinant Transpose</tags>
   </metadata>
+  <files>
+	<file src="bin\$configuration$\Matrix.dll" target="lib\net45\" />
+  </files>
 </package>
